demos/sftp/resources/sftp_dep.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ${VAR_SFTP_SERVER_NAMESPACE}-sftp-server
  namespace: $VAR_SFTP_SERVER_NAMESPACE
  labels:
    app: ${VAR_SFTP_SERVER_NAMESPACE}-sftp-server
    app.kubernetes.io/component: ${VAR_SFTP_SERVER_NAMESPACE}-sftp-server
    app.kubernetes.io/instance: ${VAR_SFTP_SERVER_NAMESPACE}-sftp-server  
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: ${VAR_SFTP_SERVER_NAMESPACE}-sftp-server  
  template:
    metadata:
      labels:
        deployment: ${VAR_SFTP_SERVER_NAMESPACE}-sftp-server 
    spec:
      volumes:
        - name: sftp-users
          secret:
            secretName: ${VAR_SFTP_SERVER_NAMESPACE}-sftp-creds-secret
            defaultMode: 420
        - name: sftp-ssh
          configMap:
            name: ${VAR_SFTP_SERVER_NAMESPACE}-ssh-conf-cm
            defaultMode: 384
        - name: ${VAR_SFTP_SERVER_NAMESPACE}-sftp-pvc
          persistentVolumeClaim:
            claimName: ${VAR_SFTP_SERVER_NAMESPACE}-sftp-pvc            
      containers:
        - resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          terminationMessagePath: /dev/termination-log
          name: ${VAR_SFTP_SERVER_NAMESPACE}-sftp-server
          securityContext:
            capabilities:
              add:
                - SYS_CHROOT          
          ports:
            - containerPort: 22
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: sftp-users
              readOnly: true
              mountPath: /etc/sftp
            - name: sftp-ssh
              readOnly: true
              mountPath: /etc/ssh
            - name: ${VAR_SFTP_SERVER_NAMESPACE}-sftp-pvc
              mountPath: /home/data              
          terminationMessagePolicy: File
          image: 'atmoz/sftp:alpine'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
