demos/sftp/resources/sftp_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ${VAR_SFTP_SERVER_NAMESPACE}-sftp-route
  namespace: $VAR_SFTP_SERVER_NAMESPACE
spec:
  to:
    kind: Service
    name: ${VAR_SFTP_SERVER_NAMESPACE}-sftp-service
    weight: 100
  port:
    targetPort: 22-tcp
  wildcardPolicy: None
